--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,9 @@
       <title>{{ site.name }} : {{ page.title }}</title>
       <meta name="viewport" content="width=device-width">
       <!-- syntax highlighting CSS -->
-      <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css">
+      <link rel="stylesheet" href="{{ site.baseurl }}assets/css/syntax.css">
       <!-- Custom CSS -->
-      <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">
+      <link rel="stylesheet" href="{{ site.baseurl }}assets/css/styles.css">
   </head>
     <body>
 
