Refined index.html, added "styleguide" folder to assets/sass. Added logo to site-header.

--- a/assets/sass/_normalize.scss
+++ b/assets/sass/_normalize.scss
@@ -279,7 +279,7 @@ q {
 
 /* Address inconsistent and variable font size in all browsers. */
 small {
-  font-size: 80%;
+  @include adjust-font-size-to($label, .5);
 }
 
 /* Prevent `sub` and `sup` affecting `line-height` in all browsers. */
