added Rollup and Finder Component markup and styles.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,9 @@
       <header class="styleguide-header">
         <div class="l-page">
           <h1 class="element-invisible">{{ site.name }}</h1>
-          <img src="{{ site.baseurl }}/assets/img/smalltabs-logo__header.svg" />
+          <a href="{{ site.baseurl }}/index.html">
+            <img src="{{ site.baseurl }}/assets/img/smalltabs-logo__header.svg" />
+          </a>
         </div>
       </header>
 
