--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,12 @@
 ---
 layout: default
 ---
-<div class="l-page">
-  <h2>{{ page.title }}</h2>
-  <p>{{ page.description }}</p>
-  <hr />
+<div class="styleguide-component-container">
+  {{ content }}
 </div>
 
-{{ content }}
+<div class="l-page">
+  <hr />
+  <h2>{{ page.title }}</h2>
+  <p>{{ page.description }}</p>
+</div>
