--- a/assets/sass/_mixins.scss
+++ b/assets/sass/_mixins.scss
@@ -25,7 +25,7 @@
    ========================================================================== */
 
 /* Sans-serif type */
-%sans { font-family: $franklin-gothic; }
+//%sans { font-family: $franklin-gothic; }
 
 /* Display type */
 %display-type { font-family: $sentinel; }
