--- a/assets/sass/_init.scss
+++ b/assets/sass/_init.scss
@@ -49,7 +49,7 @@ $legacy-support-for-ie8: true;
 // use in the normalize.scss file.
 // @see http://compass-style.org/reference/compass/typography/vertical_rhythm/
 
-$base-font-size: 14px; // The font size set on the root html element.
+$base-font-size: 15px; // The font size set on the root html element.
 $base-line-height: 12px; // This line-height determines the basic unit of vertical rhythm.
 
 // Modular Scale
@@ -83,24 +83,25 @@ $h6-font-size: $label;
 // find any of the fonts in the list.
 
 // First, let's create some font stacks.
-$georgia:         Georgia, "Times New Roman", "DejaVu Serif", serif;
-$helvetica:       "Helvetica Neue", Helvetica, Arial, "Nimbus Sans L", sans-serif;
-$sentinel-ssm:    'Sentinel SSm A', 'Sentinel SSm B', $georgia;
-$sentinel:        'Sentinel A', 'Sentinel B', $georgia;
-$franklin-gothic: "franklin-gothic-urw-1","franklin-gothic-urw-2", $helvetica;
+$georgia: Georgia, "Times New Roman", "DejaVu Serif", serif;
+$helvetica: "Helvetica Neue", Helvetica, Arial, "Nimbus Sans L", sans-serif;
+$sentinel-ssm: 'Sentinel SSm A', 'Sentinel SSm B', $georgia;
+$sentinel: 'Sentinel A', 'Sentinel B', $georgia;
+$champion-welterweight: 'Champion Welterwt A', 'Champion Welterwt B', $helvetica;
+$champion-lightweight: 'Champion Lightwt A', 'Champion Lightwt B', $helvetica;
+$gotham-ssm: 'Gotham SSm A', 'Gotham SSm B', $helvetica;
 
 // For an explanation of why "sans-serif" is at the end of this list, see
 // http://meyerweb.com/eric/thoughts/2010/02/12/fixed-monospace-sizing/
-$courier:         "Courier New", "DejaVu Sans Mono", monospace, sans-serif;
+$courier: "Courier New", "DejaVu Sans Mono", monospace, sans-serif;
 
 // Now create some variables for the font stacks we want to use on this site.
 $base-font-family: $sentinel-ssm; // The font family set on the html element.
-//$base-font-family: $franklin-gothic; // The font family set on the html element.
 $font-monospace:   $courier;
 
 // Sass color variables, etc.
-$black: #222222;
-$gray-dark: #454545;
+$black: #444444;
+//$gray-dark: #454545;
 $gray-medium: #9d9d9d;
 $gray-light: #cecece;
 $off-white: #ededed;
@@ -125,6 +126,8 @@ $indent-amount: rhythm(1);
 $timing: .5s;
 $easing: ease-out;
 
+// Border radius for common UI elements
+$radius: 3px;
 
 // =============================================================================
 // Partials to be shared with all .scss files.
