Refactored component page layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <body>
 
       <header class="styleguide-header">
-        <div class="l-page">
+        <div class="l-styleguide-page">
           <h1 class="element-invisible">{{ site.name }}</h1>
           <a href="{{ site.baseurl }}/index.html">
             <img src="{{ site.baseurl }}/assets/img/smalltabs-logo__header.svg" />
@@ -24,8 +24,8 @@
       {{ content }}
 
       <footer class="styleguide-footer">
-        <div class="l-page">
-          <small><a href="http://www.smalltabs.com">Small Tabs</a> is a product created by <a href="http://twitter.com/mattmesker">@mattmesker</a>, <a href="http://twitter.com/patrickgrady">@patrickgrady</a> and <a href="http://twitter.com/meskermichael">@meskermichael</a>.</small>
+        <div class="l-styleguide-page">
+          <p>Small Tabs is a product created by <a href="http://twitter.com/mattmesker">@mattmesker</a>, <a href="http://twitter.com/patrickgrady">@patrickgrady</a> and <a href="http://twitter.com/meskermichael">@meskermichael</a>.</p>
         </div>
       </footer>
 
