--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,13 @@
 ---
 layout: default
 ---
-<div class="styleguide-component-container">
-  {{ content }}
-</div>
-
-<div class="l-page">
-  <hr />
+<div class="l-styleguide-page">
   <h2>{{ page.title }}</h2>
   <p>{{ page.description }}</p>
+</div>
+
+<div class="styleguide-example-wrapper">
+  <div class="styleguide-example">
+    {{ content }}
+  </div>
 </div>
