--- a/assets/sass/_init.scss
+++ b/assets/sass/_init.scss
@@ -109,6 +109,8 @@ $white: #ffffff;
 $white-60: rgba($white, .60);
 $white-30: rgba($white, .30);
 $ipa: #e35125;
+$stout: #1e140c;
+
 $link-color: $ipa;
 
 // Breakpoint Variables
