--- a/assets/sass/components/_finder.scss
+++ b/assets/sass/components/_finder.scss
@@ -3,6 +3,7 @@
  * Style rules for the specials finder.
  */
 
+//.finder { //background-color: $white; }
 .finder__heading {
   //padding-bottom: rhythm(1);  
   //border-bottom: 1px solid $off-white;
