--- a/assets/sass/components/_rollup.scss
+++ b/assets/sass/components/_rollup.scss
@@ -8,7 +8,6 @@
 }
 
 .rollup {
-  border: 1px solid $off-white;
   background-color: $white;
   padding: rhythm(1.5) rhythm(1.5) rhythm(.5) rhythm(1.5);
   margin-bottom: $zen-gutter-width;  
@@ -17,24 +16,7 @@
 .rollup__title {
   @include adjust-font-size-to($sm-heading, 1.5);
   @include leader(0, $sm-heading);
-  @include trailer(.25, $sm-heading);
-}
-
-.rollup__address {
-  color: $gray-medium;
-
-  a:link,
-  a:visited { 
-    color: $gray-medium;
-    text-decoration: underline;  
-  }
-  a:hover,
-  a:focus,
-  a:active {
-    @include trans($timing, $easing);
-    color: $link-color;
-    text-decoration: underline;  
-  }  
+  @include trailer(.5, $sm-heading);
 }
 
 .rollup__list {
@@ -45,17 +27,15 @@
     border-top: 1px solid $off-white;
     padding-top: rhythm(1);
     margin-bottom: rhythm(1);
+    padding-left: rhythm(2);
   }
 }
 
 .rollup__address,
 .rollup__list-drink,
-.rollup__list-food {
-  @include adjust-font-size-to($label, 1.5);
-}
-
+.rollup__list-food,
 .rollup__list-category {
-  @include adjust-font-size-to($crumb, .5);
+  @include adjust-font-size-to($label, 1.5);
 
   a:link,
   a:visited { 
@@ -71,6 +51,18 @@
   }
 }
 
+.rollup__list-drink { background: url('../img/icon__drink.svg'); }
+.rollup__list-food { background-image: url('../img/icon__food.svg'); }
+.rollup__list-category { background-image: url('../img/icon__tag.svg'); }
+.rollup__list-drink,
+.rollup__list-food,
+.rollup__list-category {
+  background-position: left top rhythm(1.25);
+  background-repeat: no-repeat;
+  background-size: 1em;
+}
+
+/*
 .rollup__list-drink:before,
 .rollup__list-food:before,
 .rollup__list-category:before { 
@@ -86,7 +78,7 @@
 .rollup__list-drink:before { content: 'date'; }
 .rollup__list-food:before { content: 'date'; }
 .rollup__list-category:before { content: 'tag'; }
-
+*/
 
 
 
