--- a/assets/sass/components/_site-header.scss
+++ b/assets/sass/components/_site-header.scss
@@ -4,61 +4,36 @@
  */
 
 .site-header { 
-  @extend %column;
-  margin-top: rhythm(2);
-  margin-bottom: rhythm(2);
-  @include clearfix;
+  display: block;
+  background-color: $stout;
+  padding: rhythm(2) 0;  
 }
 
-
-/*
 .site-logo {
   float: left;
   vertical-align: middle;
   line-height: 0;
-  border-radius: 3px;
-  width: 40px;
   height: 40px;
-  background-color: $gray-medium; // fix this
-  @include breakpoint($bp1) {
-    width: 48px;
-    height: 48px;
-  }
 }
-.site-logo img {
-  position: relative;
-  top: 9px;
-  left: 9px;
-  width: 22px;
-  @include breakpoint($bp1) {
-    top: 11px;
-    left: 11px;
-    width: 26px;
-  }
-}
-*/
 
 .site-navigation {
-  @extend %sans;
-  @extend %track-in;
-  @include adjust-font-size-to($text, 0);
-  font-weight: 300;
-  display: block;
+  float: right;
   height: 40px;
-  //float: left;
-  @include breakpoint($bp1) {
-    height: 48px;
-  }
+  font-family: $champion-lightweight;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: .0125em;
+  @include adjust-font-size-to($text, 0);
 }
 
 .site-navigation a:link,
-.site-navigation a:visited {
+.site-navigation a:visited {  
   position: relative;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
-  padding-right: rhythm(1);
+  padding-right: rhythm(1.5);
   border-bottom: 0;
 }
 .site-navigation a:hover,
@@ -68,13 +43,7 @@
   -o-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
   text-decoration: none;  
-  color: $black;
+  color: $white;
 }
-.site-navigation__title {
-  font-weight: 700;
-  color: $black;
-}
-.site-navigation__github {
-  float: right;
-}
-a > .site-navigation__github { color: #eee; }
+
+
