--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -1,17 +1,15 @@
 <article class="feature feature__image">
 
   <div class="container">
-    <div class="l-2up--2">
-      <h1 class="feature__title"><a href="#">Finley Dunnes</a></h1>
-      <p class="feature__address">
-        2657 N Kedzie Ave,
-        <a href="#">Lakeview</a>
-      </p>
-      <p class="feature__summary"></p>
-      <ul class="feature__list">
-        <li class="feature__list-drink">$7 Domestic Pitchers, $3 Miller Lite Bottles, $4 Four Rebels Lion Bombs</li>
-        <li class="feature__list-food">$10 8 Chicken Wings & 2 Miller Lite Bottles, $25 20 Chicken Wings & 5 Miller Lite Bottles</li>
-        <li class="feature__list-category"><a href="#">Sports Bar</a></li>      
+    <div class="l-page">
+      <p class="feature__dotw">Featured Tuesday Special:</p>
+      <h1 class="feature__title"><a href="#">Finley Dunne's Tavern</a></h1>
+      <p class="feature__address">3458 N Lincoln Ave, Lakeview</p>
+      <p class="feature__summary">Finley Dunne's Tavern was established in 1996 and remains one of the most popular neighbor bars in the Paulina Station area of Lakeview in Chicago. The Tavern serves a wide array of neighborhood guests and groups. It has become a destination spot for many who want to enjoy the great staff, large beer selection, and our Famous “Ryan Burger”.</p>
+      <ul class="feature-list">
+        <li class="feature-list__drink">$7 Domestic Pitchers, $3 Miller Lite Bottles, $4 Four Rebels Lion Bombs</li>
+        <li class="feature-list__food">$10 8 Chicken Wings & 2 Miller Lite Bottles, $25 20 Chicken Wings & 5 Miller Lite Bottles</li>
+        <li class="feature-list__category"><a href="#">Sports Bar</a></li>      
       </ul>
     </div>
   </div>
