--- a/assets/sass/_init.scss
+++ b/assets/sass/_init.scss
@@ -103,13 +103,14 @@ $font-monospace:   $courier;
 $black: #444444;
 //$gray-dark: #454545;
 $gray-medium: #9d9d9d;
-$gray-light: #cecece;
-$off-white: #ededed;
+$gray-light: #d5d5d5;
+$off-white: #f5f5f5;
 $white: #ffffff;
 $white-60: rgba($white, .60);
 $white-30: rgba($white, .30);
 $ipa: #e35125;
 $stout: #1e140c;
+$pilsner: #fdbb11;
 
 $link-color: $ipa;
 
@@ -125,7 +126,7 @@ $slug: rhythm(8);
 $indent-amount: rhythm(1);
 
 // Hover state effects
-$timing: .5s;
+$timing: .25s;
 $easing: ease-out;
 
 // Border radius for common UI elements
@@ -149,6 +150,5 @@ $radius: 3px;
 @import "zen";
 // Add the Breakpoint mixin.
 @import "breakpoint";
-
 // Now we add our custom helper mixins.
 @import "mixins";
