Added markup display to component pages.

--- a/_includes/finder_ui.html
+++ b/_includes/finder_ui.html
@@ -1,9 +1,6 @@
-<div class="finder">
-  <div class="finder__image">
-    <div class="container">
-      <div class="l-1up">
-        <h1 class="finder__heading">Thrifty & Thirsty in Chicago?</h1>
-        <h2 class="finder__subheading">Use Small Tabs to find a great night out without spending a fortune!</h2>
+
+
+        <h1>Browse Specials:</h1>
 
         <form>
           <p>
@@ -75,6 +72,3 @@
 
           </p>
       </form>
-    </div>
-  </div>
-</div>
