--- a/_includes/neighborhoods-list.html
+++ b/_includes/neighborhoods-list.html
@@ -1,3 +1,5 @@
+<h1>420 bars, 39 Neighborhoods:</h1>
+
 <ul class="neighborhoods-list">
   <li><a href="#">Albany Park</a></li>
   <li><a href="#">Andersonville</a></li>
