--- a/_includes/rollup--b.html
+++ b/_includes/rollup--b.html
@@ -1,5 +1,5 @@
 <article class="rollup">
-  <h1 class="rollup-title"><a href="#">The Abbey Pub</a></h1>
+  <h1 class="rollup-title"><a href="#">2. The Abbey Pub</a></h1>
   <p class="rollup-address">
     3420 W Grace St,
     <a href="#">Irving Park</a>
