--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -1,11 +1,15 @@
-<article class="feature feature__image">
+<article class="feature l-stripe">
 
   <div class="container">
-    <div class="l-page">
+    <div class="l-2up--1">
+       <img class="feature__image" src="{{ site.baseurl }}/assets/img/feature__image-2.jpg" />
+    </div>
+
+    <div class="l-2up--2">
       <p class="feature__dotw">Featured Tuesday Special:</p>
       <h1 class="feature__title"><a href="#">Finley Dunne's Tavern</a></h1>
       <p class="feature__address">3458 N Lincoln Ave, Lakeview</p>
-      <p class="feature__summary">Finley Dunne's Tavern was established in 1996 and remains one of the most popular neighbor bars in the Paulina Station area of Lakeview in Chicago. The Tavern serves a wide array of neighborhood guests and groups. It has become a destination spot for many who want to enjoy the great staff, large beer selection, and our Famous “Ryan Burger”.</p>
+
       <ul class="feature-list">
         <li class="feature-list__drink">$7 Domestic Pitchers, $3 Miller Lite Bottles, $4 Four Rebels Lion Bombs</li>
         <li class="feature-list__food">$10 8 Chicken Wings & 2 Miller Lite Bottles, $25 20 Chicken Wings & 5 Miller Lite Bottles</li>
