--- a/assets/sass/styleguide/_styleguide.scss
+++ b/assets/sass/styleguide/_styleguide.scss
@@ -8,9 +8,9 @@
   margin-bottom: rhythm(8);
 }
 .styleguide-footer {
+  background: $white;
   @include adjust-font-size-to($crumb, 1);
-  padding-top: rhythm(3);
-  padding-bottom: rhythm(2);
+  padding-top: rhythm(4);
 }
 .l-styleguide-page {
   @extend %l-page;
