Added support for jekyll-contentblocks (https://github.com/rustygeldmacher/jekyll-contentblocks)

--- a/_includes/rollup--a.html
+++ b/_includes/rollup--a.html
@@ -1,12 +1,12 @@
 <article class="rollup">
-  <h1 class="rollup-title"><a href="#">1. Longman & Eagle</a></h1>
+  <h1 class="rollup-title"><a href="#">Longman & Eagle</a></h1>
   <p class="rollup-address">
     2657 N Kedzie Ave,
     <a href="#">Logan Square</a>
   </p>
   <ul class="rollup-list">
     <li class="rollup-list__drink">$7 Domestic Pitchers, $3 Miller Lite Bottles, $4 Four Rebels Lion Bombs</li>
-    <li class="rollup-list__food">$10 8 Chicken Wings & 2 Miller Lite Bottles, $25 20 Chicken Wings & 5 Miller Lite Bottles</li>
+    <li class="rollup-list__food">$7.99 12oz New York Strip Steak Dinner, $3.50 Half Pound Black Angus Burger, $4.50 Deluxe Burger w/ Cheese & Fries</li>
     <li class="rollup-list__category"><a href="#">Sports Bar</a>, <a href="#">Night Club</a></li>      
   </ul>
 </article>
