--- a/_includes/rollup--c.html
+++ b/_includes/rollup--c.html
@@ -1,5 +1,5 @@
 <article class="rollup">
-  <h1 class="rollup-title"><a href="#">3. The Lion Head Pub</a></h1>
+  <h1 class="rollup-title"><a href="#">The Lion Head Pub</a></h1>
   <p class="rollup-address">
     2251 N Lincoln Ave,
     <a href="#">Lincoln Park</a>
