--- a/assets/sass/styleguide/_styleguide.scss
+++ b/assets/sass/styleguide/_styleguide.scss
@@ -17,7 +17,7 @@
   margin-bottom: rhythm(4);
 }
 .styleguide-example-wrapper { 
-  background: #f3f3f3;
+  background: $off-white;
 }
 .styleguide-example-wrapper:before {
   content: "Example:";
