--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,10 @@
 layout: default
 ---
 <div class="l-styleguide-page">
-  <h2>{{ page.title }}</h2>
+  <small><a href="{{ site.baseurl }}/index.html">{{ site.name }}</a> › {{ page.categories }}:</small>
+  <hr />  
+  <h1>{{ page.title }}</h1>
   <p>{{ page.description }}</p>
 </div>
 
-<div class="styleguide-example-wrapper">
-  <div class="styleguide-example">
-    {{ content }}
-  </div>
-</div>
+{{ content }}
