--- a/assets/sass/_init.scss
+++ b/assets/sass/_init.scss
@@ -93,24 +93,25 @@ $gotham-ssm: 'Gotham SSm A', 'Gotham SSm B', $helvetica;
 
 // For an explanation of why "sans-serif" is at the end of this list, see
 // http://meyerweb.com/eric/thoughts/2010/02/12/fixed-monospace-sizing/
-$courier: "Courier New", "DejaVu Sans Mono", monospace, sans-serif;
+$monospace: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;;
 
 // Now create some variables for the font stacks we want to use on this site.
-$base-font-family: $sentinel-ssm; // The font family set on the html element.
-$font-monospace:   $courier;
+$base-font-family: $helvetica; // The font family set on the html element.
+$font-monospace:   $monospace;
 
 // Sass color variables, etc.
 $black: #444444;
 //$gray-dark: #454545;
 $gray-medium: #9d9d9d;
 $gray-light: #d5d5d5;
-$off-white: #f5f5f5;
+$off-white: #f5f4ee;
 $white: #ffffff;
 $white-60: rgba($white, .60);
 $white-30: rgba($white, .30);
 $ipa: #e35125;
 $stout: #1e140c;
 $pilsner: #fdbb11;
+$mushroom: #d7d3be;
 
 $link-color: $ipa;
 
