--- a/assets/sass/components/_rollup.scss
+++ b/assets/sass/components/_rollup.scss
@@ -9,19 +9,30 @@
 }
 
 .rollup {
-  background-color: $off-white;
-  padding: rhythm(1.5) rhythm(1.5) rhythm(.5) rhythm(1.5);
-  margin-bottom: $zen-gutter-width;  
+  background-color: $white;
+  //padding: rhythm(1.5) rhythm(1.5) rhythm(.5) rhythm(1.5);
+  margin-bottom: $zen-gutter-width / 2;  
   //min-height: 320px; 
 }
 .rollup-title {
+  @extend %sentinel;
+  font-weight: 700;
   @include adjust-font-size-to($sm-heading, 1.5);
   @include leader(0, $sm-heading);
   @include trailer(.5, $sm-heading);
+  padding-top: rhythm(1.5, $sm-heading);
+  padding-left: rhythm(4, $sm-heading);
+  //padding-left: rhythm(4, $sm-heading);
+  padding-right: rhythm(1, $sm-heading);  
 }
 .rollup-address {
-  @include adjust-font-size-to($label, 1.5);  
-  color: $gray-medium;
+  @include adjust-font-size-to($crumb, 1);
+  @include trailer(0, $crumb);
+  @extend %allcaps;  
+  //color: $gray-medium;
+  padding-left: rhythm(4, $crumb); 
+  padding-right: rhythm(1, $crumb);    
+  padding-bottom: rhythm(1.5, $crumb);  
 
   a:link,
   a:visited { 
@@ -43,9 +54,11 @@
 
   li {
     border-top: 1px solid $off-white;
-    padding-top: rhythm(1);
-    margin-bottom: rhythm(1);
-    padding-left: rhythm(2);
+    padding-top: rhythm(1.25, $label);
+    padding-right: rhythm(1, $label);
+    padding-bottom: rhythm(1.25, $label);
+    padding-left: rhythm(4, $label);    
+    margin-bottom: 0;
   }
 }
 .rollup-list__drink,
@@ -72,7 +85,7 @@
 .rollup-list__drink,
 .rollup-list__food,
 .rollup-list__category {
-  background-position: left top rhythm(1.25);
+  background-position: left rhythm(1.5, $label) top rhythm(1.5, $label);
   background-repeat: no-repeat;
   background-size: 1em;
 }
