Removed jekyll-contentblocks plugin

--- a/_layouts/component.html
+++ b/_layouts/component.html
@@ -11,7 +11,7 @@ layout: post
   <div class="l-1up">
     <h4>Markup</h4>
 {% highlight html %}
-{% contentblock markup %}
+{{ content }}
 {% endhighlight %}
   </div>
 </div>
